# mclient

./: .gitignore  CMakeLists.txt  README  build.sh  mclient.files  mclient.includes  runme  vc++.bat  winbuild.bat
src/: CMakeLists.txt  main.cpp
src/actionplugin/: ActionPlugin.cpp  ActionPlugin.h  CMakeLists.txt
src/aliasplugin/: AliasPlugin.cpp  AliasPlugin.h  CMakeLists.txt
src/clientcore/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  PluginEntry.h  PluginManager.cpp  PluginSession.cpp  PluginSession.h
src/clientcore/command/: ActionManager.h  AliasManager.cpp  AliasManager.h  CMakeLists.txt  CommandEntry.h  CommandProcessor.cpp  CommandProcessor.h  CommandTask.cpp  CommandTask.h
src/clientcore/display/: AliasEditorDialog.cpp  AliasEditorDialog.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  ProfileManagerDialog.h  ProfileManagerDialog.ui  QuickConnectDialog.h  SmartMenu.h  SmartMenuBar.cpp  SmartMenuBar.h  SmartTabWidget.cpp  WindowActionManager.cpp  WindowActionManager.h
src/commandmanager/: CMakeLists.txt  CommandManager.cpp  CommandManager.h
src/commandprocessor/: AbstractCommandTask.cpp  AbstractCommandTask.h  ActionManager.cpp  ActionManager.h  AliasManager.cpp  AliasManager.h  CommandEntry.cpp  CommandEntry.h  CommandProcessor.cpp  CommandProcessor.h  CommandTask.cpp  CommandTask.h  MudCommandTask.cpp  MudCommandTask.h  UserCommandTask.cpp  UserCommandTask.h
src/display/: DisplayParser.cpp  DisplayParser.h  DisplayWebKitWidget.cpp  DisplayWebKitWidget.h  InputMultiWidget.cpp  InputMultiWidget.h  InputPasswordWidget.cpp  InputPasswordWidget.h  InputWidget.cpp  InputWidget.h  MainWindow.cpp  MainWindow.h  ProfileManagerDialog.cpp  QuickConnectDialog.cpp  QuickConnectDialog.h  QuickConnectDialog.ui  RemoteEditWidget.cpp  RemoteEditWidget.h  WindowActionManager.cpp  WindowActionManager.h
src/mainwindow/: ActionManager.cpp  ActionManager.h  AliasEditorDialog.cpp  AliasEditorDialog.h  AliasEditorDialog.ui  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.qrc  ObjectViewer.cpp  ObjectViewer.h  ProfileManagerDialog.cpp  QuickConnectDialog.cpp  QuickConnectDialog.h  SmartMenu.cpp  SmartMenu.h  SmartMenuBar.cpp  SmartSplitter.cpp  SmartSplitter.h  SmartTabWidget.h  WindowActionManager.cpp  WindowActionManager.h
src/mclientplugin/: AbstractPluginSession.h  CMakeLists.txt  ConfigEntry.cpp  ConfigEntry.h  ConfigManager.cpp  ConfigManager.h  MClientDataFilter.h  MClientDefinitions.h  MClientDisplayHandler.cpp  MClientDisplayHandler.h  MClientDisplayHandlerInterface.h  MClientDisplayInterface.h  MClientDisplayPlugin.cpp  MClientDisplayPlugin.h  MClientEngineEvent.cpp  MClientEngineEvent.h  MClientEvent.cpp  MClientEvent.h  MClientEventData.cpp  MClientEventData.h  MClientEventHandler.cpp  MClientEventHandler.h  MClientEventHandlerInterface.h  MClientFilterInterface.h  MClientFilterPlugin.cpp  MClientFilterPlugin.h  MClientIOInterface.h  MClientIOPlugin.cpp  MClientIOPlugin.h  MClientPlugin.cpp  MClientPlugin.h  MClientPluginInterface.h  PluginConfigWidget.cpp  PluginConfigWidget.h  PluginEntry.cpp  PluginEntry.h  PluginManager.cpp  PluginManager.h  PluginSession.cpp  PluginSession.h
src/mmapperplugin/: CMakeLists.txt  MMapperPlugin.cpp  MMapperPlugin.h  MMapperPluginParser.cpp  MMapperPluginParser.h  MapperManager.cpp  MapperManager.h
src/mmapperplugin/display/: mapcanvas.cpp  mapcanvas.h  prespammedpath.cpp  prespammedpath.h
src/mmapperplugin/expandoracommon/: coordinate.cpp  mmapper2event.cpp  mmapper2event.h
src/mmapperplugin/mainwindow/: findroomsdlg.cpp
src/mmapperplugin/mapdata/: mmapper2exit.h
src/mmapperplugin/mapfrontend/: mapaction.h  mapfrontend.h
src/mmapperplugin/parser/: abstractparser.cpp  abstractparser.h  mumexmlparser.cpp
src/mmapperplugin/pathmachine/: mmapper2pathmachine.h
src/mmapperplugin/preferences/: configdialog.cpp
src/mmapperplugin/proxy/: connectionlistener.cpp  connectionlistener.h  proxy.cpp  proxy.h
src/mumexml/: CMakeLists.txt  MumeXML.cpp  MumeXML.h
src/plugins/: CMakeLists.txt
src/plugins/actionplugin/: ActionPlugin.cpp  ActionPlugin.h  CMakeLists.txt
src/plugins/aliasplugin/: AliasPlugin.cpp  AliasPlugin.h  CMakeLists.txt
src/plugins/mmapperplugin/: CMakeLists.txt  EventHandler.cpp  EventHandler.h  MMapperPlugin.cpp  MMapperPlugin.h  MMapperPluginParser.cpp  MMapperPluginParser.h  MapperManager.cpp  MapperManager.h
src/plugins/multilineinput/: CMakeLists.txt  EventHandler.cpp  EventHandler.h  InputWidget.cpp  InputWidget.h  MultiLineInput.cpp  MultiLineInput.h  PasswordWidget.cpp  PasswordWidget.h  StackedWidget.cpp  StackedWidget.h
src/plugins/mumexml/: CMakeLists.txt  EventHandler.cpp  EventHandler.h  MumeXML.cpp  MumeXML.h
src/plugins/proxymanagerio/: CMakeLists.txt  EventHandler.cpp  EventHandler.h  ProxyConnection.cpp  ProxyConnection.h  ProxyManagerIO.cpp  ProxyManagerIO.h  ProxyServer.cpp  ProxyServer.h
src/plugins/qtscriptplugin/: CMakeLists.txt  EventHandler.cpp  EventHandler.h  QtScriptPlugin.cpp  QtScriptPlugin.h  ScriptEngine.cpp  ScriptEngine.h  TimerClass.cpp  TimerClass.h  TimerPrototype.cpp  TimerPrototype.h
src/plugins/remoteedit/: CMakeLists.txt  EditSessionProcess.cpp  EditSessionProcess.h  EventHandler.cpp  (+4 more)
src/protocol/: EditSessionProcess.cpp  EditSessionProcess.h  MpiParser.cpp  MumeXML.cpp  MumeXML.h  RemoteEdit.cpp  RemoteEdit.h  TelnetParser.cpp  TelnetParser.h  ViewSessionProcess.cpp  ViewSessionProcess.h
src/qtscriptplugin/: CMakeLists.txt  QtScriptPlugin.cpp  QtScriptPlugin.h  ScriptEngine.cpp  ScriptEngine.h
src/resources/: DisplayWebKitWidget.qrc  MainWindow.qrc
src/session/: Session.cpp  Session.h
src/simplelineinput/: CMakeLists.txt  InputWidget.cpp  InputWidget.h  SimpleLineInput.cpp  SimpleLineInput.h
src/socket/: SocketReader.cpp  SocketReader.h
src/socketmanagerio/: CMakeLists.txt  SocketManagerIO.cpp  SocketManagerIO.h  SocketManagerIOConfig.cpp  SocketReader.cpp  SocketReader.h
src/telnet/: CMakeLists.txt  MCCP.h  Telnet.cpp
src/webkitdisplay/: CMakeLists.txt  DisplayWidget.cpp  WebKitDisplay.cpp  WebKitDisplay.h
(+102 files in other folders)
